# Wind0ws_Dynamic_island

./: .plan.md  1.txt  ARCHITECTURE.md  CARGO_MIRROR_CONFIG.md  CLAUDE.md  FIX_CARGO_LOCK.md  GITHUB_PUSH_SOLUTION.md  QUICK_START.md  README.md  REFACTOR_GUIDE.md  REFACTOR_SUMMARY.md  Real_IOS.md  design.md  fix-cargo-lock.bat  index.html  jsconfig.json  package-lock.json  package.json  settings.html  vite.config.js  代码.md
docs/: settings-sync-mechanism.md
scripts/: convert-ico.js  convert-icons.js
src/: App.svelte  FloatingWindow.svelte  Settings.svelte  album-cover-settings.md  app.css  main.ts  settings.css  settings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  event_bus.rs  lib.rs  main.rs
src-tauri/src/commands/: cache.rs  media.rs  mod.rs  monitor.rs  settings.rs  window.rs
src-tauri/src/models/: cache.rs  media.rs  mod.rs  settings.rs
src-tauri/src/services/: cache.rs  color.rs  image.rs  media.rs  mod.rs  settings.rs  spectrum.rs
src-tauri/src/state/: app_state.rs  mod.rs
src/api/: settings.ts
src/components/: index.js
src/components/common/: Button.svelte  Card.svelte  Input.svelte  Toggle.svelte
src/lib/api/: cache.ts  events.ts  index.ts  media.ts  settings.ts  types.ts  window.ts
src/routes/pip/: +page.svelte
src/routes/settings/: +page.svelte
src/stores/: index.js  player.js  player.svelte.js  settings.js  theme.js
src/styles/: base.css  components.css  variables.css
src/types/: settings.ts
src/utils/: eventConstants.ts  eventManager.ts  tauri.js
